--- a/package.json
+++ b/package.json
@@ -13,19 +13,16 @@
   },
   "dependencies": {
     "@iconify-json/heroicons": "^1.1.19",
+    "@iconify-json/mdi": "^1.1.64",
     "@iconify-json/simple-icons": "^1.1.90",
-    "@nuxt/ui-pro": "^0.7.5",
+    "@nuxt/ui": "2.13.0",
     "nuxt": "^3.10.1"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "eslint": "^8.56.0",
-    "vue-tsc": "^1.8.27"
-  },
-  "resolutions": {
-    "vue": "3.3.13"
-  },
-  "overrides": {
-    "vue": "3.3.13"
+    "vue-tsc": "^1.8.27",
+    "vue": "^3.4.10",
+    "vue-router": "^4.2.5"
   }
 }
